--- a/Calculator.BLL/Calculator.BLL.csproj
+++ b/Calculator.BLL/Calculator.BLL.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Calculator.DAL\Calculator.DAL.csproj" />
+    <ProjectReference Include="..\Calculator.Domain\Calculator.Domain.csproj" />
   </ItemGroup>
 
 </Project>
